src/objects/wbsendit__Suppression__c.object
<CustomObject>
    <description>Contains a list of emails that are on the Campaign Monitor Suppression List.</description>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Monitor Client</label>
        <referenceTo>wbsendit__Client__c</referenceTo>
        <relationshipLabel>Suppression List</relationshipLabel>
        <relationshipName>Suppression_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Compound_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Internal field.</inlineHelpText>
        <label>Compound Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wbsendit__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Suppression List</relationshipLabel>
        <relationshipName>Suppression_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Date_Suppressed__c</fullName>
        <label>Date Suppressed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>wbsendit__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Suppression List</relationshipLabel>
        <relationshipName>Suppression_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Reason__c</fullName>
        <inlineHelpText>The reason why the email is on the suppression list.</inlineHelpText>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Suppressed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suppressed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Suppression List</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Suppression Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppression List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>